fixed modalwindow, fixed uppercase search, changed edit input to unvisible

--- a/src/App.css
+++ b/src/App.css
@@ -145,3 +145,7 @@ textarea {
   font-size: 1rem;
   line-height: 2rem;
 }
+
+.search-bar-input{
+  height: 20px;
+}
